添加 => 修复 => POST 更新 =>

--- a/基础框架/后台管理/修改密码.md
+++ b/基础框架/后台管理/修改密码.md
@@ -2,7 +2,7 @@
 
 ## URL
 
-/base/frame/:uid/passwd
+/base/frame/passwd
 
 ## 支持格式
 
@@ -10,7 +10,7 @@ JSON
 
 ## HTTP请求方式
 
-PUT
+POST
 
 ## 是否需要登录
 
