添加 => avatar introduction 修复 => roles 更新 =>

--- a/基础框架/后台管理/用户信息.md
+++ b/基础框架/后台管理/用户信息.md
@@ -2,7 +2,7 @@
 
 ## URL
 
-/base/frame/:uid/profile
+/base/frame/profile
 
 ## 支持格式
 
@@ -27,9 +27,10 @@ POST
 
 ```json
 {
-    "uid": "91002",
     "name": "大熊",
-    "menus": [
+    "avatar": "",
+    "introduction": "",
+    "roles": [
         {
             "id": 1101,
             "pid": 1001,
@@ -94,9 +95,10 @@ POST
 
 字段 | 类型及范围 | 说明
 ----|----------|-------------
-uid             | string  | 用户uid
-name            | string  | 用户姓名
-menus           | array   | 菜单
+name            | string  | 姓名
+avatar          | string  | 头像
+introduction    | string  | 介绍
+roles           | array   | 权限
 
 ## 其他
 
