--- a/基础框架/用户管理/用户列表.md
+++ b/基础框架/用户管理/用户列表.md
@@ -41,7 +41,6 @@ sort                  |   否   | string  | 排序 sort=-id,user_number
 字段 | 说明
 ----|------
 id              | 主键ID
-user_number     | 用户员工号
 
 ## 注意事项
 
@@ -61,16 +60,16 @@ user_number     | 用户员工号
     "list":[
         {
             "id": 1,
-            "dept": "北研究院",
             "email": "xxxxx@itcast.cn",
-            "job": "JavaEE课程研究员",
-            "level": "工程师",
-            "password": "123456",
             "phone": "186000000000",
-            "user_number": "90001",
             "username": "大熊",
+            "password": "123456",
             "permission_group_id": 1,
             "permission_group_title": "权限组名称",
+            "avatar": "",
+            "introduction": "",
+            "create_time": "2018-10-10",
+            "last_update_time": "2018-10-10",
             "is_deleted": 0
         }
     ]
@@ -94,16 +93,14 @@ list        | array  | 数据集合
 字段 | 必选 | 类型及范围 | 说明
 ----|------|----------|-------------
 id                      |   是   | number  | 主键ID
-user_number             |   是   | string  | 用户员工号
+email                   |   否   | string  | 邮箱
+phone                   |   否   | string  | 联系电话
 username                |   是   | string  | 用户名
 password                |   是   | string  | 密码
-dept                    |   是   | string  | 部门
-email                   |   是   | string  | 邮箱
-job                     |   是   | string  | 岗位
-level                   |   是   | string  | 级别
-phone                   |   是   | string  | 联系电话
 permission_group_id     |   是   | number  | 权限组id
 permission_group_title  |   是   | string  | 权限组名称
+avatar                  |   否   | string  | 头像
+introduction            |   否   | string  | 介绍
 is_deleted              |   是   | number  | 是否被删除 0 否 1 是
 
 ## 其他
