--- a/基础框架/用户管理/用户更新.md
+++ b/基础框架/用户管理/用户更新.md
@@ -23,15 +23,13 @@ PUT
 ```json
 {
     "id": 1,
-    "dept": "北研究院",
     "email": "xxxxx@itcast.cn",
-    "job": "JavaEE课程研究员",
-    "level": "工程师",
-    "password": "123456",
     "phone": "186000000000",
-    "user_number": "90001",
     "username": "大熊",
-    "permission_group_id": 1
+    "password": "123456",
+    "permission_group_id": 1,
+    "avatar": "",
+    "introduction": ""
 }
 ```
 
@@ -41,16 +39,14 @@ PUT
 
 字段 | 必选 | 类型及范围 | 说明
 ----|------|----------|-------------
-id                      |   是   | number    | 主键ID
-dept                    |   是   | string  | 部门
-email                   |   是   | string  | 邮箱
-job                     |   是   | string  | 岗位
-level                   |   是   | string  | 级别
-password                |   是   | string  | 密码
-phone                   |   是   | string  | 联系电话
-user_number             |   是   | string  | 用户员工号
+id                      |   是   | number  | 主键ID
+email                   |   否   | string  | 邮箱
+phone                   |   否   | string  | 联系电话
 username                |   是   | string  | 用户名
+password                |   是   | string  | 密码
 permission_group_id     |   是   | number  | 权限组id
+avatar                  |   否   | string  | 头像
+introduction            |   否   | string  | 介绍
 
 ## 注意事项
 
