--- a/基础框架/后台管理/用户登录.md
+++ b/基础框架/后台管理/用户登录.md
@@ -19,7 +19,7 @@ POST
 字段 | 必选 | 类型及范围 | 说明
 ----|------|----------|-------------
 username     | 是   | string  | 账号
-password     | 是   | string  | 密码
+password     | 是   | string  | 密码 sha1
 
 ## 注意事项
 
