--- a/基础框架/用户管理/用户添加.md
+++ b/基础框架/用户管理/用户添加.md
@@ -41,7 +41,7 @@ POST
 email                   |   否   | string  | 邮箱
 phone                   |   否   | string  | 联系电话
 username                |   是   | string  | 用户名
-password                |   是   | string  | 密码
+password                |   是   | string  | 密码 sha1
 permission_group_id     |   是   | number  | 权限组id
 avatar                  |   否   | string  | 头像
 introduction            |   否   | string  | 介绍
