添加 => 修复 => 更新 => 菜单、权限点、用户信息

--- a/基础框架/后台管理/用户信息.md
+++ b/基础框架/后台管理/用户信息.md
@@ -28,53 +28,12 @@ POST
 ```json
 {
     "name": "大熊",
-    "avatar": "",
-    "introduction": "",
-    "roles": [
-        {
-            "id": 1101,
-            "pid": 1001,
-            "title": "首页",
-            "is_menu_display": 1,
-            "icon": "fa-dashboard",
-            "url": "/",
-            "router": "/"
-        },
-        {
-            "id": 1101,
-            "pid": 1001,
-            "title": "图表统计",
-            "is_menu_display": 1,
-            "icon": "fa-area-chart",
-            "url": "",
-            "router": "",
-            "childs": [
-                {
-                    "id": 1101,
-                    "pid": 1001,
-                    "title": "机构开班图谱",
-                    "is_menu_display": 1,
-                    "icon": "",
-                    "url": "/echat/organization-open",
-                    "router": "/testPoints/:id"
-                }
-            ],
-            "points": [
-                {
-                    "id": 1106,
-                    "pid": 1102,
-                    "code": "read-list",
-                    "title": "读取头条信息"
-                },
-                {
-                    "id": 1107,
-                    "pid": 1102,
-                    "code": "read-card",
-                    "title": "读取头条卡片"
-                }
-            ]
-        }
-    ]
+    "avatar": "http://or45inefq.bkt.clouddn.com/mCHjc.jpg",
+    "introduction": "后台管理员",
+    "roles": {
+      "menus": ["base-manage", "base-users", "base-menus", "base-permissions", "base-logs"],
+      "points": ["base-users-list" , "base-users-edit"]
+    }
 }
 ```
 
@@ -98,7 +57,8 @@ POST
 name            | string  | 姓名
 avatar          | string  | 头像
 introduction    | string  | 介绍
-roles           | array   | 权限
+roles.menus     | array   | 菜单权限
+roles.points    | array   | 页面权限点
 
 ## 其他
 
