--- a/基础框架/后台管理/用户登录.md
+++ b/基础框架/后台管理/用户登录.md
@@ -29,8 +29,6 @@ password     | 是   | string  | 密码 sha1
 
 ```json
 {
-    "uid": "91002",
-    "name": "大熊",
     "token": "B6vQf0RpvlIXcxACXBIkYcsGx1WxGcF7"
 }
 ```
@@ -53,9 +51,7 @@ password     | 是   | string  | 密码 sha1
 
 字段 | 类型及范围 | 说明
 ----|----------|-------------
-uid                     | string  | 用户uid
-name                    | string  | 用户姓名
-token                   | string  | 用户访问令牌
+token                   | string  | 用户令牌
 
 ## 其他
 
