--- a/基础框架/权限组管理/权限组列表.md
+++ b/基础框架/权限组管理/权限组列表.md
@@ -60,17 +60,17 @@ create_date     | 创建日期
         {
             "id": 1,
             "title": "超级管理员",
-            "create_date": '2017/10/22'
+            "create_date": "2017/10/22"
         },
         {
             "id": 2,
             "title": "校长",
-            "create_date": '2017/10/22'
+            "create_date": "2017/10/22"
         },
         {
             "id": 3,
             "title": "老师",
-            "create_date": '2017/10/22'
+            "create_date": "2017/10/22"
         }
     ]
 }
