--- a/基础框架/权限组管理/权限组详情.md
+++ b/基础框架/权限组管理/权限组详情.md
@@ -38,7 +38,7 @@ id    |   是   | number    | 数据id
     "id": 1101,
     "title": "宇宙管理员",
     "permissions": [1101,1102,1103],
-    "create_date": '2017/10/22'
+    "create_date": "2017/10/22"
 }
 ```
 
