--- a/基础框架/菜单管理/菜单修改.md
+++ b/基础框架/菜单管理/菜单修改.md
@@ -8,7 +8,7 @@
 
 JSON
 
-## HTTP请求方式
+## HTTP 请求方式
 
 PUT
 
@@ -16,61 +16,53 @@ PUT
 
 是
 
-如果request中的认证信息不正确，要返回状态码 401，即NOT AUTHORIZED
+如果 request 中的认证信息不正确，要返回状态码 401，即 NOT AUTHORIZED
 
 ## 请求参数
 
-- 修改菜单
+* 修改菜单
 
-字段 | 必选 | 类型及范围 | 说明
-----|------|----------|-------------
-id                |   是   | number    | id
-pid               |   是   | number    | 父id
-title             |   是   | string    | 菜单标题
-icon              |   否   | string    | 菜单图标
-url               |   否   | string    | 菜单链接
-router            |   否   | string    | 链接路由
-order_num         |   是   | number    | 排序号 小的排在最前面，同层有效
-is_menu_display   |   是   | number    | 是否在菜单显示 1 显示(默认) 0 不显示
+| 字段  | 必选 | 类型及范围 | 说明          |
+| ----- | ---- | ---------- | ------------- |
+| id    | 是   | number     | id            |
+| pid   | 是   | number     | 父 id         |
+| code  | 是   | string     | 菜单代码 唯一 |
+| title | 是   | string     | 菜单标题      |
 
 ```json
 {
   "id": 225,
   "pid": 6,
-  "title": "计划审核",
-  "icon": "",
-  "url": "/plan/list/yes",
-  "router": "/plan\n/plan/list\n/plan/list/:check",
-  "order_num": 1,
-  "is_menu_display": 1
+  "code": "base-users",
+  "title": "用户管理"
 }
 ```
 
-- 修改权限点
+* 修改权限点
 
 权限点只能挂在页面上
 
-字段 | 必选 | 类型及范围 | 说明
-----|------|----------|-------------
-id                |   是   | number    | id
-pid               |   是   | number    | 父id
-code              |   是   | string    | 权限点代码 ， 权限点代码，同层不能重复
-title             |   是   | string    | 权限点名称
+| 字段  | 必选 | 类型及范围 | 说明            |
+| ----- | ---- | ---------- | --------------- |
+| id    | 是   | number     | id              |
+| pid   | 是   | number     | 父 id           |
+| code  | 是   | string     | 权限点代码 唯一 |
+| title | 是   | string     | 权限点标题      |
 
 ```json
 {
   "id": 174,
   "pid": 35,
-  "code": "act_plan_recall",
-  "title": "撤回计划"
+  "code": "base-users-list",
+  "title": "用户管理-用户数据读取"
 }
 ```
 
 ## 注意事项
 
-### HTTP状态
+### HTTP 状态
 
-- 201 Created - 对创建新资源的 POST 操作进行响应。应该带着指向新资源地址的 Location 头
+* 201 Created - 对创建新资源的 POST 操作进行响应。应该带着指向新资源地址的 Location 头
 
 ## 返回结果
 
