--- a/基础框架/菜单管理/菜单列表.md
+++ b/基础框架/菜单管理/菜单列表.md
@@ -47,50 +47,40 @@ order_num     | 排序号
     {
         "id": 1101,
         "pid": 1001,
-        "title": "头条管理",
-        "icon": "fa-newspaper-o",
-        "url": "",
-        "layer": 0,
-        "order_num": 10,
-        "is_menu_display": 1,
+        "code": "base",
+        "title": "数据管理",
         "childs": [
             {
                 "id": 1102,
                 "pid": 1101,
-                "title": "头条列表",
-                "icon": "fa-circle-o",
-                "url": "/manage/newslist",
-                "router": "/manage/newslist/:id",
-                "layer": 1,
-                "order_num": 0,
-                "is_menu_display": 1,
-                "childs": [],
+                "code": "base-users",
+                "title": "用户管理",
                 "points": [
                     {
                         "id": 1106,
                         "pid": 1102,
-                        "code": "read-list",
-                        "title": "读取头条信息"
+                        "code": "base-users-list",
+                        "title": "用户管理-读取"
                     },
                     {
                         "id": 1107,
                         "pid": 1102,
-                        "code": "read-card",
-                        "title": "读取头条卡片"
+                        "code": "base-users-edit",
+                        "title": "用户管理-修改"
                     }
                 ]
             },
             {
                 "id": 1103,
                 "pid": 1101,
-                "title": "头条添加",
-                "icon": "fa-circle-o",
-                "url": "/manage/newsadd",
-                "router": "/manage/newslist/:id",
-                "layer": 1,
-                "order_num": 1,
-                "is_menu_display": 1,
-                "childs": []
+                "code": "base-menus",
+                "title": "菜单管理",
+            },
+            {
+                "id": 1104,
+                "pid": 1101,
+                "code": "base-permissions",
+                "title": "权限管理",
             }
         ]
     }
@@ -103,22 +93,10 @@ order_num     | 排序号
 ----|----------|-------------
 id                      | number     | id
 pid                     | number     | 父级id
-title                   | string     | 菜单标题
-icon                    | string     | 菜单图标， 参考 font-awesome
-url                     | string     | 菜单链接
-router                  | string    | 链接路由
-layer                   | number     | 层高 从 0 开始
+code                    | string     | 菜单/权限点 代码
+title                   | string     | 菜单/权限点 标题
 childs                  | array      | 子节点
-order_num               | number     | 排序号 小的排在最前面，同层有效
-is_menu_display         | number     | 是否在菜单显示 1 显示(默认) 0 不显示
-
-- 字体 http://fontawesome.io/icons/
-
-```js
-<i class="fa fa-address-book" aria-hidden="true"></i>
-```
-
-选取 `fa-address-book`
+points                  | array      | 权限点
 
 ## 其他
 
