--- a/基础框架/菜单管理/菜单添加.md
+++ b/基础框架/菜单管理/菜单添加.md
@@ -23,24 +23,16 @@ POST
 * 添加菜单
 
 | 字段            | 必选 | 类型及范围 | 说明                                 |
-| --------------- | ---- | ---------- | ------------------------------------ |
-| pid             | 是   | number     | 父 id                                |
-| title           | 是   | string     | 菜单标题                             |
-| icon            | 否   | string     | 菜单图标                             |
-| url             | 否   | string     | 菜单链接                             |
-| router          | 否   | string     | 链接路由                             |
-| order_num       | 是   | number     | 排序号 小的排在最前面，同层有效      |
-| is_menu_display | 是   | number     | 是否在菜单显示 1 显示(默认) 0 不显示 |
+| --------------- | ---- | ---------- | --------------------------------- |
+| pid             | 是   | number     | 父 id                             |
+| code            | 是   | string     | 菜单代码 唯一                       |
+| title           | 是   | string     | 菜单标题                           |
 
 ```json
 {
-  "pid": 6,
-  "title": "计划审核",
-  "icon": "",
-  "url": "/plan/list/yes",
-  "router": "/plan\n/plan/list\n/plan/list/:check",
-  "order_num": 1,
-  "is_menu_display": 1
+  "pid": 1,
+  "code": "base-users",
+  "title": "用户管理"
 }
 ```
 
@@ -51,14 +43,14 @@ POST
 | 字段  | 必选 | 类型及范围 | 说明                                   |
 | ----- | ---- | ---------- | -------------------------------------- |
 | pid   | 是   | number     | 父 id                                  |
-| code  | 是   | string     | 权限点代码 ， 权限点代码，同层不能重复 |
-| title | 是   | string     | 权限点名称                             |
+| code  | 是   | string     | 权限点代码 唯一                          |
+| title | 是   | string     | 权限点标题                             |
 
 ```json
 {
   "pid": 35,
-  "code": "act_plan_recall",
-  "title": "撤回计划"
+  "code": "base-users-list",
+  "title": "用户管理-用户数据读取"
 }
 ```
 
