--- a/基础框架/菜单管理/菜单详情.md
+++ b/基础框架/菜单管理/菜单详情.md
@@ -38,14 +38,8 @@ id    |   是   | number    | 数据id
     "id": 1101,
     "pid": 1001,
     "is_point": false,
-    "code": "",
-    "title": "头条管理",
-    "icon": "fa-newspaper-o",
-    "url": "/manage/newslist",
-    "router": "/manage/newslist/:id",
-    "layer": 0,
-    "order_num": 10,
-    "is_menu_display": 1
+    "code": "base-users",
+    "title": "用户管理"
 }
 ```
 
@@ -56,14 +50,8 @@ id    |   是   | number    | 数据id
 id                      | number     | id
 pid                     | number     | 父级id
 is_point                | bool       | 是否权限点
-code                    | string     | 权限点代码
-title                   | string     | 菜单标题，权限点标题
-icon                    | string     | 菜单图标， 参考 font-awesome
-url                     | string     | 菜单链接
-router                  | string    | 链接路由
-layer                   | number     | 层高 从 0 开始
-order_num               | number     | 排序号 小的排在最前面，同层有效
-is_menu_display         | number     | 是否在菜单显示 1 显示(默认) 0 不显示
+code                    | string     | 菜单/权限点 代码
+title                   | string     | 菜单/权限点 标题
 
 ## 其他
 
