--- a/基础框架/用户管理/用户列表.md
+++ b/基础框架/用户管理/用户列表.md
@@ -103,4 +103,28 @@ is_deleted              |   是   | number  | 是否被删除 0 否 1 是
 
 ## 其他
 
+- mock.js
+
+```json
+{
+  "counts": 150,
+  "pagesize": 10,
+  "pages": 15,
+  "page": 1,
+  "list|10": [{
+    "id|+1": 1,
+    "email": "@email",
+    "phone": /^1[385][1-9]\d{8}/,
+    "username": "@cname",
+    "permission_group_id": 1,
+    "permission_group_title": "权限组名称",
+    "avatar": "@image",
+    "introduction": "@cparagraph",
+    "create_time": "@datetime",
+    "last_update_time": "@datetime",
+    "is_deleted|0-1": 0
+  }]
+}
+```
+
 ## 相关问题
