添加 => 修复 => 更新 =>目录 base 权限

--- a/基础框架/后台管理/用户信息.md
+++ b/基础框架/后台管理/用户信息.md
@@ -27,13 +27,13 @@ POST
 
 ```json
 {
-    "name": "大熊",
-    "avatar": "http://or45inefq.bkt.clouddn.com/mCHjc.jpg",
-    "introduction": "后台管理员",
-    "roles": {
-      "menus": ["base-manage", "base-users", "base-menus", "base-permissions", "base-logs"],
-      "points": ["base-users-list" , "base-users-edit"]
-    }
+  "name": "大熊",
+  "avatar": "http://or45inefq.bkt.clouddn.com/mCHjc.jpg",
+  "introduction": "后台管理员",
+  "roles": {
+    "menus": ["base", "base-manage", "base-users", "base-menus", "base-permissions", "base-logs"],
+    "points": ["base-users-list", "base-users-edit"]
+  }
 }
 ```
 
