添加 => 修复 => 更新 =>头像 faker.js

--- a/设计说明/模拟数据.md
+++ b/设计说明/模拟数据.md
@@ -1,12 +1,12 @@
 # 模拟数据
 
-## 在线模拟
+## 在线基地址
 
-* 基地址
+https://www.easy-mock.com/mock/5ab213e33666166110a94928/admin
 
-?> https://www.easy-mock.com/mock/5ab213e33666166110a94928/admin
+## 自动数据选择一：mock.js
 
-## mock.js 数据
+https://github.com/nuysoft/Mock/wiki/Mock.Random
 
 * 样例
 
@@ -32,6 +32,22 @@
 }
 ```
 
-* 参考手册
+## 自动数据选择二：faker.js
 
-?> https://github.com/nuysoft/Mock/wiki/Mock.Random
+https://github.com/marak/Faker.js
+
+* 样例
+
+```html
+<script src = "faker.js" type = "text/javascript"></script>
+<script>
+  var randomName = faker.name.findName(); // Caitlyn Kerluke
+  var randomEmail = faker.internet.email(); // Rusty@arne.info
+  var randomCard = faker.helpers.createCard(); // random contact card containing many properties
+</script>
+```
+
+## 头像随机 `avatar`
+
+http://lorempixel.com/
+http://lorempixel.com/120/120/people
