更新 =>加入 is_point 确认是否权限点

--- a/基础框架/菜单管理/菜单修改.md
+++ b/基础框架/菜单管理/菜单修改.md
@@ -20,41 +20,21 @@ PUT
 
 ## 请求参数
 
-* 修改菜单
-
-| 字段  | 必选 | 类型及范围 | 说明          |
-| ----- | ---- | ---------- | ------------- |
-| id    | 是   | number     | id            |
-| pid   | 是   | number     | 父 id         |
-| code  | 是   | string     | 菜单代码 唯一 |
-| title | 是   | string     | 菜单标题      |
+| 字段     | 必选 | 类型及范围 | 说明          |
+| -------- | ---- | ---------- | ------------- |
+| is_point | 是   | bool       | 是否权限点    |
+| id       | 是   | number     | id            |
+| pid      | 是   | number     | 父 id         |
+| code     | 是   | string     | 菜单代码 唯一 |
+| title    | 是   | string     | 菜单标题      |
 
 ```json
 {
+  "is_point": true,
   "id": 225,
   "pid": 6,
   "code": "base-users",
   "title": "用户管理"
-}
-```
-
-* 修改权限点
-
-权限点只能挂在页面上
-
-| 字段  | 必选 | 类型及范围 | 说明            |
-| ----- | ---- | ---------- | --------------- |
-| id    | 是   | number     | id              |
-| pid   | 是   | number     | 父 id           |
-| code  | 是   | string     | 权限点代码 唯一 |
-| title | 是   | string     | 权限点标题      |
-
-```json
-{
-  "id": 174,
-  "pid": 35,
-  "code": "base-users-list",
-  "title": "用户管理-用户数据读取"
 }
 ```
 
