--- a/基础框架/菜单管理/菜单添加.md
+++ b/基础框架/菜单管理/菜单添加.md
@@ -20,37 +20,19 @@ POST
 
 ## 请求参数
 
-* 添加菜单
-
-| 字段            | 必选 | 类型及范围 | 说明                                 |
-| --------------- | ---- | ---------- | --------------------------------- |
-| pid             | 是   | number     | 父 id                             |
-| code            | 是   | string     | 菜单代码 唯一                       |
-| title           | 是   | string     | 菜单标题                           |
+| 字段     | 必选 | 类型及范围 | 说明          |
+| -------- | ---- | ---------- | ------------- |
+| is_point | 是   | bool       | 是否权限点    |
+| pid      | 是   | number     | 父 id         |
+| code     | 是   | string     | 菜单代码 唯一 |
+| title    | 是   | string     | 菜单标题      |
 
 ```json
 {
+  "is_point": true,
   "pid": 1,
   "code": "base-users",
   "title": "用户管理"
-}
-```
-
-* 添加权限点
-
-权限点只能挂在页面上
-
-| 字段  | 必选 | 类型及范围 | 说明                                   |
-| ----- | ---- | ---------- | -------------------------------------- |
-| pid   | 是   | number     | 父 id                                  |
-| code  | 是   | string     | 权限点代码 唯一                          |
-| title | 是   | string     | 权限点标题                             |
-
-```json
-{
-  "pid": 35,
-  "code": "base-users-list",
-  "title": "用户管理-用户数据读取"
 }
 ```
 
