update => is_point

--- a/基础框架/菜单管理/菜单列表.md
+++ b/基础框架/菜单管理/菜单列表.md
@@ -50,13 +50,15 @@ GET
                         "id": 1106,
                         "pid": 1102,
                         "code": "base-users-list",
-                        "title": "用户管理-读取"
+                        "title": "用户管理-读取",
+                        "is_point": true
                     },
                     {
                         "id": 1107,
                         "pid": 1102,
                         "code": "base-users-edit",
-                        "title": "用户管理-修改"
+                        "title": "用户管理-修改",
+                        "is_point": true
                     }
                 ]
             },
@@ -87,6 +89,7 @@ code                    | string     | 菜单/权限点 代码
 title                   | string     | 菜单/权限点 标题
 childs                  | array      | 子节点
 points                  | array      | 权限点
+is_point                | bool       | 是否权限点
 
 ## 其他
 
